# wakfu_deck_builder

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  README.md  eslint.config.mjs  headers.txt  index.html  package-lock.json  package.json  playwright.config.ts  prototype-design.html  tailwind.config.js  temp_cursorrules.txt  tsconfig.json  tsconfig.node.json  tsconfig.server.json  vercel.json  vite.config.ts  vitest.config.ts
.cursor/: mcp.json
analysis/: card_types_analysis.json  types_analysis.json
data/: amakna.json  ankama-convention-5.json  astrub.json  bonta-brakmar.json  chaos-dogrest.json  deck_iop.json  dofus-collection.json  draft.json  failed_downloads.json  ile-des-wabbits.json  incarnam.json  otomai.json  pandala.json
docs/: AUDIT-2026-06.md  AUDIT-STARTERS.md  CDC-MODULE-JEU-ETAT.md  CDC-MODULE-JEU-V1.md  DATA-PIPELINE.md  DEPLOY-V1.sql  GAME-MODULE-V1.md  ONLINE-PLAY-RUNBOOK.md  ROADMAP-BETA-STARTERS.md  ROADMAP-effects.md  dofus-mag-index.md  dofus-mag-matching-report.md
e2e/: a11y.spec.ts  app.spec.ts
public/: robots.txt
schemas/: card.schema.json  deck-source.schema.json  errata.schema.json
scripts/: _dumpPilots.ts  analyzeCardStructure.ts  analyzeTypes.ts  analyze_card_types.py  auditStarters.ts  cardWorker.js  checkAuthStatus.ts  checkCards.ts  checkIds.ts  checkStructure.js  checkTables.ts  compileEffects.ts  copyAssets.js  countCards.ts  countExpectedImages.ts  debugRoute.ts  dewatermark.js  dofusMagExtractWorkflow.js  getLogs.js  (+36 more)
src-tauri/: Cargo.toml  manifest.xml  tauri.conf.json
(+2821 files in other folders)
