[package]
name = "wakfu-deck-builder"
version = "1.0.0"
description = "Constructeur de deck pour Wakfu TCG - Application locale de gestion de cartes et de construction de decks"
authors = ["Wakfu Deck Builder Team"]
license = "MIT"
repository = "https://github.com/your-repo/wakfu-deck-builder"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
